--- a/strona2.html
+++ b/strona2.html
@@ -11,13 +11,14 @@
 <body>
     <div class="container">
         <div class="row tlo">
+            <div class="menu">
+                <a href="./index.html" class="herf btn2">ENIAC - pierwszy komputer</a>
+                <a href="./strona2.html" class="herf btn1 clr">Era komputerów desktopowych</a>
+                <a href="./strona3.html" class="herf">Era laptopów, czyli komputerów przenośnych</a>
+            </div>
             <div>
+                <div class="pause"></div>
                 <h1 class="tyt">Era komputerów desktopowych</h1>
-                <div>
-                    <a class="btn btn2" href="index.html">Cofnij</a>
-                    <a class="btn1 btn" href="strona3.html">Dalej</a>
-                </div>
-                <h2 class="tyt">ENIAC - pierwszy komputer</h2>
                 <div class="pause"></div>
                 <img src="./zdj4.jpg" alt="" class="zdj1">
                 <p class="txt1">Pierwsze komputery, które mogły być dostępne dla zwykłych użytkowników w warunkach domowych powstały jednak dopiero w latach 80. XX wieku, czyli niemal 40 lat po powstaniu ENIACA. Bardzo szybko ogólnie dostępne komputery PC dorobiły się też pierwszego systemu operacyjnego w postaci Windowsa 1.0, w którym wykorzystano nawet już interfejs graficzny GUI. Tamten Windows działał w postaci nakładki na MS-DOS. Jego powstanie jest obecnie umownie uważane za faktyczny początek ery desktopów, które mogły być wygodnie wykorzystywane w warunkach domowych. Takie komputery nie zajmowały już bowiem tak wiele miejsca, można je było wygodnie umieścić na biurku. Ich ceny także nie były zbyt wysokie. Jako dobry przykład można podać kultowy już dziś komputer Commodore 64, za który w dniu premiery trzeba było zapłacić 595 dolarów, cały czas jak na tamte czasy sporo, ale na pewno nie była to już cena zaporowa. Ten komputer pracował już z taktowaniem 1 MHz, miał też 64 KB pamięci RAM.  Zastosowano w nim również napęd dyskietek 5,25 cala, które na pewno wielu naszych czytelników jeszcze pamięta.
