--- a/strona3.html
+++ b/strona3.html
@@ -11,12 +11,14 @@
 <body>
     <div class="container">
         <div class="row tlo">
+            <div class="menu">
+                <a href="./index.html" class="herf btn2">ENIAC - pierwszy komputer</a>
+                <a href="./strona2.html" class="herf btn1">Era komputerów desktopowych</a>
+                <a href="./strona3.html" class="herf clr">Era laptopów, czyli komputerów przenośnych</a>
+            </div>
             <div>
+                <div class="pause"></div>
                 <h1 class="tyt">Era laptopów, czyli komputerów przenośnych</h1>
-                <div>
-                    <a class="btn btn2" href="strona2.html">Cofnij</a>
-                </div>
-                <h2 class="tyt">ENIAC - pierwszy komputer</h2>
                 <div class="pause"></div>
                 <img src="./zdj5.jfif" alt="" class="zdj1">
                 <p class="txt1">Mniej więcej pod koniec lat 90. XX wieku laptopom udało się zdobyć dosyć dużą część rynku komputerowego, choć nie znaczy to, że wcześniej laptopów nie było. Były, ale ze względu na swoje ograniczenia wydajnościowe oraz dużo wyższe ceny nie były tak chętnie kupowane przez klientów. Pierwszy laptop pojawił się jeszcze pod koniec lat 70., czyli jeszcze przed powszechnym udostępnieniem desktopów.
